@@ -10,6 +10,7 @@ Release date: March 3, 2022
 * Enhancement: Info List - Added Text Shadow and Spacing options for title
 * Enhancement: Info List - Added spacing option for button
 * Enhancement: Icon List - Added icon size option for individual icons
+* Enhancement: Link Effects - Added HTML tag option
 
 == 2.6.9 ==
 Release date: February 7, 2022
